# kraken

./: Cargo.toml  LICENSE  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: http.rs  lib.rs
client/src/http/: client.rs  mod.rs  private.rs
kraken/: Cargo.toml  README.md
kraken-cli/: Cargo.toml
kraken-cli/src/: main.rs
kraken/src/api/: display.rs  mod.rs  private.rs  public.rs  request.rs
src/: api.rs  lib.rs  main.rs
src/api/: endpoints.rs  mod.rs  models.rs  private.rs  private_endpoints.rs  public.rs  public_endpoints.rs  request.rs
src/http/: libs.rs  libs_test.rs  private.rs  public.rs
