[package]
name = "kraken"
version = "0.9.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.0"
serde_with = "1.11.0"
async-trait = "0.1.52"
bytes = "1"
thiserror = "1.0.30"
digest = "0.10.1"
data-encoding = "2.3.2"
sha2 = "0.10.0"
hmac = "0.12.0"
chrono = "0.4"
dotenv = "0.15.0"
rust_decimal = "1.19.0"
clap = "2.34.0"
anyhow = "1.0.52"